Format entries count to use locale-specific number formatting (adding commas to number of entries for readabillity)

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
                     // Update entries count
                     let entriesCountElement = document.getElementById('entriesCount');
-                    entriesCountElement.textContent = `Entries in current table: ${totalRecords}`;
+                    entriesCountElement.textContent = `Entries in current table: ${totalRecords.toLocaleString()}`;
 
                     let paginationControls = document.createElement('div');
                     paginationControls.style.marginTop = '10px';
