deploy: e70a6d41fd7f4fb3a206934d2481163b3e9f9348

--- a/index.html
+++ b/index.html
@@ -50,17 +50,36 @@
                 // Initialize SQL.js.
                 const SQL = await initSqlJs(config);
 
-                // Fetch the database file as an ArrayBuffer.
-                let response = await fetch('database.db');
-                if (!response.ok) {
-                    document.body.innerHTML = '<h2>Error loading database.db</h2>';
-                    return;
-                }
-                let buffer = await response.arrayBuffer();
-                let db = new SQL.Database(new Uint8Array(buffer));
+                // Fetch the database files as ArrayBuffers.
+                let dbFiles = ['database.db', 'database2.db'];
+                let databases = {};
 
-                // Get the table names from the database.
-                let res = db.exec("SELECT name FROM sqlite_master WHERE type='table';");
+                for (let dbFile of dbFiles) {
+                    let response = await fetch(dbFile);
+                    if (!response.ok) {
+                        console.warn(`Error loading ${dbFile}`);
+                        continue;
+                    }
+                    let buffer = await response.arrayBuffer();
+                    databases[dbFile] = new SQL.Database(new Uint8Array(buffer));
+                }
+
+                // Populate the database selection dropdown.
+                const tableSelect = document.getElementById('tableSelect');
+                tableSelect.innerHTML = "";
+                for (let [dbName, db] of Object.entries(databases)) {
+                    let res = db.exec("SELECT name FROM sqlite_master WHERE type='table';");
+                    let tableNames = (res[0] && res[0].values.map(row => row[0])) || [];
+                    tableNames.forEach(name => {
+                        let option = document.createElement('option');
+                        option.value = `${dbName}:${name}`;
+                        option.textContent = `${dbName} - ${name}`;
+                        tableSelect.appendChild(option);
+                    });
+                }
+
+                let currentDbName = Object.keys(databases)[0];
+                let currentTableName = Object.values(databases)[0].exec("SELECT name FROM sqlite_master WHERE type='table';")[0].values[0][0];
 
                 // Initialize records-per-page controls and pagination variables
                 let recordsPerPage = 25;
@@ -92,7 +111,7 @@
                         recordsPerPage = parseInt(this.value);
                     }
                     currentPage = 1;
-                    displayTable(currentTableName, document.getElementById('searchInput').value);
+                    displayTable(currentDbName, currentTableName, document.getElementById('searchInput').value);
                 });
 
                 customPerPageInput.addEventListener('input', function() {
@@ -100,27 +119,13 @@
                     if (!isNaN(val) && val > 0) {
                         recordsPerPage = val;
                         currentPage = 1;
-                        displayTable(currentTableName, document.getElementById('searchInput').value);
+                        displayTable(currentDbName, currentTableName, document.getElementById('searchInput').value);
                     }
                 });
-                let tableNames = (res[0] && res[0].values.map(row => row[0])) || [];
-                const tableSelect = document.getElementById('tableSelect');
-                tableSelect.innerHTML = "";
-                if (tableNames.length === 0) {
-                    tableSelect.innerHTML = '<option disabled>No tables found</option>';
-                    return;
-                }
-                tableNames.forEach(name => {
-                    let option = document.createElement('option');
-                    option.value = name;
-                    option.textContent = name;
-                    tableSelect.appendChild(option);
-                });
-
-                let currentTableName = tableNames[0];
 
                 // Function to display table contents with optional search filtering and pagination.
-                function displayTable(tableName, searchQuery = "") {
+                function displayTable(dbName, tableName, searchQuery = "") {
+                    let db = databases[dbName];
                     let offset = (currentPage - 1) * recordsPerPage;
                     let query = `SELECT * FROM "${tableName}" LIMIT ${recordsPerPage} OFFSET ${offset};`;
                     let result = db.exec(query);
@@ -188,7 +193,7 @@
                         prevButton.textContent = 'Previous';
                         prevButton.addEventListener('click', () => {
                             currentPage--;
-                            displayTable(tableName, searchQuery);
+                            displayTable(dbName, tableName, searchQuery);
                         });
                         paginationControls.appendChild(prevButton);
                     }
@@ -199,7 +204,7 @@
                         nextButton.style.marginLeft = '10px';
                         nextButton.addEventListener('click', () => {
                             currentPage++;
-                            displayTable(tableName, searchQuery);
+                            displayTable(dbName, tableName, searchQuery);
                         });
                         paginationControls.appendChild(nextButton);
                     }
@@ -208,19 +213,21 @@
                 }
 
                 // Display the first table by default.
-                displayTable(currentTableName);
+                displayTable(currentDbName, currentTableName);
 
                 // When table is changed, clear search and display new table.
                 tableSelect.addEventListener('change', function() {
-                    currentTableName = this.value;
+                    let [dbName, tableName] = this.value.split(':');
+                    currentDbName = dbName;
+                    currentTableName = tableName;
                     document.getElementById('searchInput').value = "";
-                    displayTable(currentTableName);
+                    displayTable(currentDbName, currentTableName);
                 });
 
                 // Live search as the user types.
                 const searchInput = document.getElementById('searchInput');
                 searchInput.addEventListener('input', function() {
-                    displayTable(currentTableName, this.value);
+                    displayTable(currentDbName, currentTableName, this.value);
                 });
             })();
         </script>
